Adjusted wrapimg class buffer to correct border flaw

--- a/supporting/styles.css
+++ b/supporting/styles.css
@@ -295,5 +295,4 @@ th {
 	box-shadow: 8px 8px 4px #999999;
 	border: 0px;
 	float: right;
-	margin: 5px;
 }
